WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45223
[chromium] Text sometimes fails to display in accelerated 2d canvases
https://bugs.webkit.org/show_bug.cgi?id=45223
Summary
[chromium] Text sometimes fails to display in accelerated 2d canvases
James Robinson
Reported
2010-09-03 19:21:26 PDT
[chromium] Text sometimes fails to display in accelerated 2d canvases
Attachments
Patch
(2.28 KB, patch)
2010-09-03 19:22 PDT
,
James Robinson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2010-09-03 19:22:28 PDT
Created
attachment 66580
[details]
Patch
Kenneth Russell
Comment 2
2010-09-03 19:30:16 PDT
Comment on
attachment 66580
[details]
Patch Looks good to me.
James Robinson
Comment 3
2010-09-03 19:31:26 PDT
Committed
r66787
: <
http://trac.webkit.org/changeset/66787
>
WebKit Review Bot
Comment 4
2010-09-03 19:46:51 PDT
http://trac.webkit.org/changeset/66787
might have broken Chromium Win Release
Kenneth Russell
Comment 5
2010-09-03 19:54:42 PDT
Committed
r66788
: <
http://trac.webkit.org/changeset/66788
>
James Robinson
Comment 6
2010-09-07 17:43:30 PDT
Committed
r66788
: <
http://trac.webkit.org/changeset/66788
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug