2010-09-03  James Robinson  <jamesr@chromium.org>

Reviewed by Kenneth Russell.

        [chromium] Text sometimes fails to display in accelerated 2d canvases
        https://bugs.webkit.org/show_bug.cgi?id=45223

        Calls PlatformContextSkia::prepareForSoftwareDraw() before drawing glyphs
        using skia to ensure that the backing store state is consistent.

        * platform/graphics/chromium/FontChromiumWin.cpp:
        (WebCore::Font::drawGlyphs):
        * platform/graphics/chromium/FontLinux.cpp:
        (WebCore::Font::drawGlyphs):

Canonical link: https://commits.webkit.org/57545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66787 268f45cc-cd09-0410-ab3c-d52691b4dbfc